api-reference/v1/webhooks/payment-successful.mdx
---
title: "PAYMENT SUCCESSFUL"
description: "Technical reference for the PAYMENT_SUCCESSFUL webhook event, including payload schema, field specifications, and implementation details."
---

---

## Event Overview

**Event Type**: `PAYMENT_SUCCESSFUL`  
**Category**: Payment  
**Description**: Payment transaction was successful

This webhook is triggered when a customer successfully completes a payment transaction through EximPe.

---

## Delivery Details

| Attribute | Value |
|-----------|--------|
| **HTTP method** | `POST` |
| **URL** | The webhook URL configured on your merchant account's API credentials |
| **Content-Type** | `application/json` |
| **Timeout** | 10 seconds |
| **Retries** | Up to 5 delivery attempts (backoff: 1 min, 5 min, 15 min, 60 min) |

### Headers

| Header | Description |
|--------|-------------|
| `Content-Type` | `application/json` |
| `User-Agent` | `Eximpe-Webhook/1.0` |
| `X-Webhook-Event` | `PAYMENT_SUCCESSFUL` |
| `X-Webhook-Timestamp` | Unix timestamp (string) at the time of the request |
| `X-Webhook-Signature` | HMAC-SHA256 signature of the request body (JSON string with keys sorted, no extra whitespace), using your API key as the secret. Hex-encoded. |

**Signature verification (recommended):**  
Compute `HMAC-SHA256(encryption_key, raw_body)` where `raw_body` is the exact UTF-8 request body as received. Compare the hex result with the `X-Webhook-Signature` header to ensure the webhook is from the platform and unchanged.

---

## Payload Schema

<CodeGroup>

```json Example Payload
{
    "event_type": "PAYMENT_SUCCESSFUL",
    "event_time": "2024-02-15 16:53:15",
    "version": "1.0",
    "sequence_number": "e40552bf-ed12-4f35-9a97-162d97e6fa34",
    "data": {
        "utr": null,
        "amount": 1000,
        "status": "CAPTURED",
        "message": "Payment Captured",
        "mop_type": "UPI",
        "order_id": "OD3376378679",
        "link_id": null,
        "payment_id": "PR6938527534",
        "bank_ref_num": "OD3376378679-PR6938527534",
        "extended_status": "SUCCESS",
        "payment_message": null,
        "subscription_id": null,
        "virtual_account_id": null,
        "payment_completed_at": "2025-06-24T12:30:44.000000Z",
        "merchant_reference_id": "S2SICR1QPJ"
    }
}
```

</CodeGroup>

---

## Field Specifications

<Tabs>
  <Tab title="Root Level Fields">
    <ParamField path="event_type" type="string" required>
      Always `"PAYMENT_SUCCESSFUL"` for this webhook event
    </ParamField>

    <ParamField path="event_time" type="string" required>
      Timestamp when the event occurred in YYYY-MM-DD HH:MM:SS format
      
      **Example**: `"2024-02-15 16:53:15"`
    </ParamField>

    <ParamField path="version" type="string" required>
      Webhook payload version (currently "1.0")
    </ParamField>

    <ParamField path="sequence_number" type="string" required>
      Unique identifier for the event instance
      
      **Example**: `"e40552bf-ed12-4f35-9a97-162d97e6fa34"`
    </ParamField>

    <ParamField path="data" type="object" required>
      Event-specific data payload containing payment transaction details
    </ParamField>
  </Tab>

  <Tab title="Data Object Fields">
    <ParamField path="data.status" type="string" required>
      Payment status (CAPTURED for successful payments)
      
      **Example**: `"CAPTURED"`
    </ParamField>

    <ParamField path="data.message" type="string" required>
      Additional message or note
      
      **Example**: `"Payment Captured"`
    </ParamField>

    <ParamField path="data.mop_type" type="string" required>
      Method of payment type
      
      **Example**: `"UPI"`
    </ParamField>

    <ParamField path="data.amount" type="number" required>
      Payment amount
      
      **Example**: `1000`
    </ParamField>

    <ParamField path="data.order_id" type="string" required>
      Order ID
      
      **Example**: `"OD3376378679"`
    </ParamField>

    <ParamField path="data.link_id" type="string">
      ID of the payment link this payment was made through — the `link_id` that [Create Payment Link](/api-reference/v1/payment-link/create) returned. `null` when the payment was not made through a payment link; the key is always present. A buyer can try a link more than once, so several payments can carry the same `link_id`, each with its own `payment_id`. On some accounts `payment_id` and `link_id` can be the same value. Match the payment to your link on `link_id`; refund and reconcile it by `payment_id`.

      **Example**: `"PR4829301756"`
    </ParamField>

    <ParamField path="data.payment_id" type="string" required>
      Payment ID
      
      **Example**: `"PR6938527534"`
    </ParamField>

    <ParamField path="data.bank_ref_num" type="string">
      Bank reference number; may be null
      
      **Example**: `"OD3376378679-PR6938527534"`
    </ParamField>

    <ParamField path="data.extended_status" type="string" required>
      Detailed status code for the payment
      
      **Example**: `"SUCCESS"`
    </ParamField>

    <ParamField path="data.payment_message" type="string">
      Additional processor-level message; may be null
    </ParamField>

    <ParamField path="data.utr" type="string">
      UTR of the payment (if any); may be null
    </ParamField>

    <ParamField path="data.subscription_id" type="string">
      Subscription ID if this payment is linked to a subscription mandate; otherwise null
    </ParamField>

    <ParamField path="data.virtual_account_id" type="string">
      Virtual account ID if this payment is linked to a VBA; otherwise null
    </ParamField>

    <ParamField path="data.merchant_reference_id" type="string" required>
      Your reference ID for the order
      
      **Example**: `"S2SICR1QPJ"`
    </ParamField>

    <ParamField path="data.payment_completed_at" type="string" required>
      ISO 8601 payment completion timestamp
      
      **Example**: `"2025-06-24T12:30:44.000000Z"`
    </ParamField>
  </Tab>
</Tabs>

---
